// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<Fragment>
  <div
    className="container"
  >
    <div
      className="form-group"
    >
      <h2
        className="form-group__heading"
      >
        Create an account
      </h2>
      <form
        action="#"
        className="form-group__form js-form-signup"
        onSubmit={[Function]}
      >
        <input
          className="form__input js-signup-email"
          name="email"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="email"
          required={true}
          type="email"
          value=""
        />
        <input
          className="form__input js-signup-password"
          minLength={5}
          name="password"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="password"
          required={true}
          type="password"
          value=""
        />
        <input
          className="form__input js-signup-repassword"
          minLength={5}
          name="repassword"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="confirm password"
          required={true}
          type="password"
          value=""
        />
        <button
          className="form__btn--submit js-login-button"
          type="submit"
        >
          Signup
        </button>
        <Link
          className="form__btn--alternate"
          replace={false}
          to="/login"
        >
          Login?
        </Link>
        <p
          className="form__error js-error-field"
        />
      </form>
    </div>
  </div>
</Fragment>
`;

exports[`renders without crashing when user is authenticated 1`] = `
<Redirect
  push={false}
  to="/"
/>
`;

exports[`renders without crashing when user is signing up 1`] = `
<Fragment>
  <div
    className="container"
  >
    <div
      className="form-group"
    >
      <h2
        className="form-group__heading"
      >
        Create an account
      </h2>
      <form
        action="#"
        className="form-group__form js-form-signup"
        onSubmit={[Function]}
      >
        <input
          className="form__input js-signup-email"
          name="email"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="email"
          required={true}
          type="email"
          value=""
        />
        <input
          className="form__input js-signup-password"
          minLength={5}
          name="password"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="password"
          required={true}
          type="password"
          value=""
        />
        <input
          className="form__input js-signup-repassword"
          minLength={5}
          name="repassword"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="confirm password"
          required={true}
          type="password"
          value=""
        />
        <button
          className="form__btn--submit js-login-button"
          type="submit"
        >
          <i
            className="fas fa-circle-notch fa-spin"
          />
        </button>
        <Link
          className="form__btn--alternate"
          replace={false}
          to="/login"
        >
          Login?
        </Link>
        <p
          className="form__error js-error-field"
        />
      </form>
    </div>
  </div>
</Fragment>
`;
